# Sheet

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  interface.py  main.py  poc.ipynb  pyproject.toml  qroq.ipynb  requirements.txt  test.ipynb
agent/: agent.py  history.py  llm.py  memory.py  middleware.py  middlewares.py  runtime.py  tools.py
config/: agent_config.py  client.py  google_config.py  logging_config.py  model_config.py  settings.py  tools_config.py
sheets/: auth.py  tools.py
tools/: tools.py
