[project]
name = "Sheet"
version = "0.1.0"
description = "AI Assistant for Google Sheets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "beautifulsoup4==4.14.3",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "executing==2.2.1",
    "google==3.0.0",
    "google-auth==2.43.0",
    "google-auth-oauthlib==1.2.2",
    "gspread==6.2.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "inquirer>=3.4.1",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.12.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "langchain[groq]>=1.2.6",
    "langgraph-checkpoint-postgres>=3.0.4",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "oauthlib==3.3.1",
    "openai==2.9.0",
    "packaging==25.0",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "psycopg[binary]>=3.3.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-ulid>=3.1.0",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich>=14.3.2",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.2",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
]
